Added Death handling and Updated goss to be a HashMap to implement a Layer System